--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ color: var(--accent-color);
      font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
+    padding-top: 200px;
     
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -207,6 +208,7 @@ padding-bottom: 10px;
 padding-left: 32px;
 padding-right: 32px;
 border-radius: 4px;
+margin-bottom: 200px;
 
 }
 /* ефект фокусу і ховера для кнопки в герої */
@@ -218,15 +220,13 @@ border-radius: 4px;
 
 .features-list {
   display: flex;
-  /* padding-top: 94px;
-  padding-bottom: 94px; */
+  margin-left: -30px;
  }
  .features-list .item{
-  min-width: 270px;
- }
- .features-list .item + .item {
+  flex-basis: calc((100% - 90px) / 4);
   margin-left: 30px;
  }
+
 /* стилізація секції 3, особливості */
 .features-title {
   font-weight: 700;
@@ -269,6 +269,9 @@ border-radius: 4px;
 }
 
 /* стилізація секції наша команда */
+.centered {
+  text-align: center;
+}
 .team-title {
   font-weight: 700;
     font-size: 36px;
@@ -303,6 +306,7 @@ padding-bottom: 94px;
     color: var(--main-color-text);
         margin-top: 0;
             margin-bottom: 10px;
+            text-align: center;
 }
 /*  стилізація посади  */
 .team-text {
@@ -312,6 +316,7 @@ padding-bottom: 94px;
       color: var(--second-color-text);
 margin-top: 0;
 margin-bottom: 30px;
+text-align: center;
 }
     /* Колір фону для секції "наша команда */
     .team {
@@ -330,6 +335,10 @@ margin-bottom: 30px;
 .container .footer {
   margin-right: 0;
 }
+.logo-link.footer {
+   padding-top: 0;
+   padding-bottom: 0;
+  }
 .footer .footer-text{
   margin-top: 20px;
   margin-bottom: 9px;
@@ -337,7 +346,6 @@ margin-bottom: 30px;
 .footer {
   line-height: 1.71;
 letter-spacing: 0.03em;
-background-color: var(--footer-background-color);
 }
 .footer-text {
 color: var(--first-background);
@@ -353,9 +361,7 @@ color: var(--footer-main-color-text);
 .footer .item-mail {
 margin-bottom: 9px;
 }
-.footer .item-tel {
-  padding-bottom: 60px;
-}
+
 
 /* ефект фокусу і ховера для телефону */
 .footer-tel:hover,
@@ -367,6 +373,7 @@ color: var(--footer-main-color-text);
 }
 /* фон для футера */
 .general{
+  padding-bottom: 60px;
   background-color: var( --footer-background-color);
 }
 
@@ -401,16 +408,19 @@ color: var(--footer-main-color-text);
 }
 
 /* Стилізація усіх кнопок */
-.cursor.list{
+.cursor.list {
            padding-bottom: 50px;
-      
+          margin-left: 273px;
+    
       }
 .container .button {
   display: flex;
 }
+
+
 .button .item + .item {
-  margin-left: 8px;
-}
+  margin-left: 29px;
+  }
 .button-item {
     font-family: inherit;
   font-weight: 500;
@@ -422,7 +432,7 @@ color: var(--footer-main-color-text);
   color: var(--main-color-text);
   padding: 6px 22px;
   border: 1px solid transparent;
-  background-color: #FFFFFF;
+  background-color: var(--background-color-team);
   border-radius: 4px;
     }
 
@@ -447,22 +457,36 @@ color: var(--footer-main-color-text);
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  background-color: teal;
- 
-}
-.flex-item {
+  margin-left: -30px;
+  }
+/* .flex-item {
   width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-    
+   margin-bottom: 20px;
+  } */
+.flex-container .flex-item {
+ flex-basis: calc((100% - 60px) / 3);
+margin-left: 30px;
 }
-.flex-item:nth-child(3n) {
+
+
+/* .flex-item:nth-child(3n) {
   margin-right: 0;
   }
 
 .flex-item:nth-last-child(-n + 3 ){
 margin-bottom: 0;
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
 
 /* Стилізація заголовка */
 .header-img {
@@ -471,6 +495,7 @@ margin-bottom: 0;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  text-align: center;
 }
 /* Стилізація опису */
 .text-img {
@@ -478,4 +503,5 @@ margin-bottom: 0;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+  text-align: center;
 }
