--- a/css/style.css
+++ b/css/style.css
@@ -474,29 +474,18 @@ color: var(--footer-main-color-text);
   border-right: 1px solid #EEEEEE;
      }
 
- /* .flex-item {
+ .flex-item {
   flex-basis: calc((100% - 60px) / 3);
   margin-right: 30px;
-     }  */
+     } 
 
-      .flex-item:not(:nth-child(3n)) {
-margin-right: 30px;
-      }  
-/* 
 .flex-item:nth-child(3n) {
   margin-right: 0;
-} */
+} 
 
-.flex-item:nth-last-child(-n + 3) {
-  margin-bottom: 20px;
+.flex-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
 }
-
-
-
-
- 
-
-
 
 /* Стилізація заголовка */
 .header-text {
